--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
 
         </dependency>
 
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-testng</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+
     </dependencies>
 
 
